force-app/main/default/objects/NCMT_LPOE_Cost_Summary__c/NCMT_LPOE_Cost_Summary__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_HelpPage</customHelpPage>
    <description>LPOE Cost Summary</description>
    <label>LPOE Cost Summary</label>
    <nameField>
        <displayFormat>LPOE-CS -{00000}</displayFormat>
        <label>LPOE Cost Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LPOE Cost Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>