force-app/main/default/objects/NCMT_LPOE_Cost_Summary__c/fields/Commercial_SF__c.field-meta.xml
<CustomField>
    <fullName>Commercial_SF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commercial SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>