force-app/main/default/objects/NCMT_LPOE_Cost_Summary__c/fields/Core_Shell_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Core_Shell_Unit_Cost__c</fullName>
    <formula>(Cost_Category_ID__r.Core_Shell_Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Shell Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>