force-app/main/default/objects/NCMT_LPOE_Cost_Summary__c/fields/Security_Cost_ECC__c.field-meta.xml
<CustomField>
    <fullName>Security_Cost_ECC__c</fullName>
    <formula>Security_Cost_Adjusted__c  *  (1+Project_Name__r.Total_Escalation__c +  Project_Name__r.Total_Escalation_CPE__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Security Cost ECC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>