force-app/main/default/objects/NCMT_LPOE_Cost_Summary__c/fields/Security_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Security_Unit_Cost__c</fullName>
    <formula>Cost_Category_ID__r.Security_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Security Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>