force-app/main/default/objects/NCMT_LPOE_Cost_Summary__c/fields/Site_Related__c.field-meta.xml
<CustomField>
    <fullName>Site_Related__c</fullName>
    <formula>Cost_Category_ID__r.Site_Related__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Related</label>
    <type>Checkbox</type>
</CustomField>