force-app/main/default/objects/NCMT_LPOE_Cost_Summary__c/fields/TI_Cost__c.field-meta.xml
<CustomField>
    <fullName>TI_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TI Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>