force-app/main/default/objects/NCMT_LPOE_Cost_Summary__c/fields/TI_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>TI_Unit_Cost__c</fullName>
    <formula>Cost_Category_ID__r.TI_Cost__c *  Cost_Category_ID__r.TI_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>