force-app/main/default/objects/NCMT_LPOE_Cost_Summary__c/fields/Total_Cost_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Adjusted__c</fullName>
    <formula>Core_Shell_Cost_Adjusted__c + TI_Cost_Adjusted__c + Security_Cost_Adjusted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Adjusted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>