force-app/main/default/objects/NCMT_LPOE_Cost_Summary__c/fields/Total_ETPC__c.field-meta.xml
<CustomField>
    <fullName>Total_ETPC__c</fullName>
    <formula>Total_ECC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total ETPC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>