force-app/main/default/objects/NCMT_LPOE_Cost_Summary__c/fields/Total_SF__c.field-meta.xml
<CustomField>
    <fullName>Total_SF__c</fullName>
    <formula>POV_SF__c +  Commercial_SF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>