force-app/main/default/objects/NCMT_LPOE_Cost_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Commercial_SF__c</columns>
    <columns>Core_Shell_Cost__c</columns>
    <columns>Core_Shell_Cost_Adjusted__c</columns>
    <columns>Cost_Category_Description__c</columns>
    <columns>Cost_Category_ID__c</columns>
    <columns>POV_SF__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Security_Cost__c</columns>
    <columns>Security_Cost_Adjusted__c</columns>
    <columns>TI_Cost__c</columns>
    <columns>TI_Cost_Adjusted__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Total_Cost_Adjusted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>